Fix #870 - Update z-index issue on hover

--- a/static/scss/partials/main.scss
+++ b/static/scss/partials/main.scss
@@ -1181,7 +1181,6 @@ input.input-has-error {
 .card-middle-row {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 4px;
-  z-index: 1;
   display: flex;
   flex-wrap: wrap;
 }
